--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClCompile Include="SM2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="BigNumber.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SM3.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="BigNumber.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
