添加w-NAF方法，优化代码

--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -42,4 +42,7 @@
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="说明文档.txt" />
+  </ItemGroup>
 </Project>
