--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <ModuleOutputFile>$(IntDir)/%(RelativeDir)/</ModuleOutputFile>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -136,6 +137,9 @@
   <ItemGroup>
     <ClInclude Include="BigNumber.h" />
     <ClInclude Include="SM3.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="说明文档.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
