--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClCompile Include="BIGNUM.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test1.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SM3.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="BIGNUM.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="test1.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
