--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -128,17 +128,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BIGINT.h" />
     <ClCompile Include="BIGNUM.cpp" />
-    <ClCompile Include="Ecc.cpp" />
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="EllipticCurve.cpp" />
     <ClCompile Include="EllipticCurve.h" />
     <ClCompile Include="SM3.cpp" />
-    <ClCompile Include="test1.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BIGNUM.h" />
     <ClInclude Include="SM3.h" />
-    <ClInclude Include="test1.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="说明文档.txt" />
