--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BIGINT.cpp" />
     <ClCompile Include="BIGINT.h" />
     <ClCompile Include="BIGNUM.cpp" />
     <ClCompile Include="test.cpp" />
