减去点加运算中对点是否在椭圆曲线上的判断，只对最后的计算结果进行判断；使用蒙哥马利算法对仿射坐标和标准射影坐标下的点加运算进行优化

--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="BIGINT.cpp" />
     <ClCompile Include="BIGINT.h" />
     <ClCompile Include="BIGNUM.cpp" />
+    <ClCompile Include="ECC.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="EllipticCurve.cpp" />
     <ClCompile Include="EllipticCurve.h" />
@@ -138,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BIGNUM.h" />
+    <ClInclude Include="ECC.h" />
     <ClInclude Include="SM3.h" />
   </ItemGroup>
   <ItemGroup>
